--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 
-MONGODB_URI = 'mongodb+srv://luisurbanejar2:X4Egf2veIVnsZV35@node-app-agenda.eiimgib.mongodb.net/?retryWrites=true&w=majority'
+MONGODB_URI = 'mongodb+srv://luisurbanejar2:X4Egf2veIVnsZV35@node-app-agenda.eiimgib.mongodb.net/Blogs?retryWrites=true&w=majority'
